BUG: Font size too large when switching from portrait to landscape screen orientation

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,25 +1,26 @@
 
 
-
 .flex-container > div {
     background-color: white;
     margin: 4px;
     text-align: left;
     white-space: nowrap;
 }
-@media (max-width: 599px){
+@media screen and (orientation: portrait) {
     .flex-container > div {
-        font-size: 40px;
+        font-size: 2.7em;
     }
 }
-@media (min-width: 600px) and (max-width: 999px){
+
+@media screen and (orientation: landscape) {
     .flex-container > div {
-        font-size: 30px;
+        font-size: 1.6em;
     }
 }
-@media (min-width: 1000px){
+
+@media (max-width: 750px){
     .flex-container > div {
-        font-size: 20px;
+        font-size: 1.6em;
     }
 }
 
@@ -29,10 +30,8 @@
     background-color: white;
 }
 
-
-
 .chord {
-    font-size: 0.6em;
+    font-size: 0.8em;
     color: red;
 }
 
